# eBtree

./: .gitignore  CMakeLists.txt  text.txt
bench/: CMakeLists.txt  README.md  carl_eval_bench.cc  carl_eval_common.cc  carl_eval_common.h  multishard_scan_bench.cc  multishard_write_bench.cc  p9_multishard_baseline.json  perf_matrix_bench.cc  read_latency_bench.cc  scan_range_bench.cc  write_throughput_bench.cc
cpp/: CMakeLists.txt
demo/: CMakeLists.txt  README.md  RECORDING_SCRIPT.md  demo_flows.h  finance_main.cc  flow_finance.cc  flow_industrial.cc  flow_medical.cc  industrial_main.cc  medical_main.cc  run_scenario.ps1
demo/finance_edge/: run.ps1
demo/industrial_config/: run.ps1
demo/medical_record/: run.ps1
gtest_capi/: CMakeLists.txt  README.md
gtest_capi/build_msvc_mt/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  gtest_capi.vcxproj  gtest_capi.vcxproj.filters  gtest_capi_samples.vcxproj  gtest_capi_samples.vcxproj.filters  gtest_capi_standalone.slnx
gtest_capi/include/: gtest_capi.h
gtest_capi/scripts/: bundle_mingw_deps.ps1
gtest_capi/src/: gtest_capi.cpp
sql/: CMakeLists.txt
sql/ast/: advanced_ast.h  expr_ast.h  minimal_ast.h  query_ast.cc  query_ast.h  select_ast.h
sql/catalog/: catalog.cc  catalog.h  catalog_store.cc  catalog_store.h  row_codec.cc  row_codec.h
sql/eval/: agg_engine.cc  agg_engine.h  expr_eval.cc  expr_eval.h  function_registry.cc  function_registry.h  like_match.cc  like_match.h  schema_context.h  sql_value.cc  sql_value.h  truth_value.h  type_affinity.cc  type_affinity.h
sql/exec/: constraint_check.cc  constraint_check.h  constraint_engine.cc  constraint_engine.h  cte_context.h  dml_executor.cc  dml_executor.h  executor.cc  executor.h  executor_v2.cc  executor_v2.h  executor_v3.cc  executor_v3.h  index_maintenance.h  mic_guard.cc  mic_guard.h  physical_scan.cc  physical_scan.h  pragma_exec.cc  pragma_exec.h  query_pipeline.h  subquery_runner.cc  subquery_runner.h  txn_read_policy.h  unified_executor.cc  unified_executor.h
sql/op_log/: op_log_writer.cc  op_log_writer.h
sql/parse/: parse_facade.h
sql/plan/: exec_plan.h  index_match.cc  index_match.h  lower.cc  lower.h
sql/session/: attestation.cc  attestation.h  database.cc  database.h  open_options.cc  open_options.h  transaction_state.cc  transaction_state.h
test/: CMakeLists.txt  TEST_MANIFEST.yaml
test/audit/: carl_benchmark_test.cc  carl_complete_test.cc  carl_eval_gate_test.cc  rar_canonical_sign_test.cc  rar_capi_verify_test.cc  rar_chain_dynamic_test.cc  rar_group_oplog_test.cc  rar_kv_write_guard_test.cc  rar_multishard_inferred_test.cc  rar_multishard_oplog_test.cc  rar_op_log_equivalence_test.cc  rar_oracle_equivalence_test.cc  rar_physical_test.cc  rar_policy_warn_test.cc  rar_recovery_test.cc  rar_require_signature_test.cc  rar_schema_conformance_test.cc  rar_stability_test.cc  rar_v3_attest_test.cc
test/complex/: btree_no_fallback_test.cc  complex_bulk_test.cc  concurrent_read_test.cc  flashback_test.cc  lazy_shard_test.cc  multishard_test.cc  scale_bulk_test.cc  summary_async_heal_test.cc  summary_heal_test.cc
test/composite/: composite_recovery_test.cc
test/demo/: demo_e2e_gate_test.cc
test/failure/: chaos_harness_test.cc  concurrent_chaos_test.cc  durability_bounds_test.cc  failure_paths_test.cc  full_replay_test.cc  lazy_recovery_test.cc  powerfail_test.cc  random_powerfail_test.cc  snapshot_occ_engine_test.cc  txn_wal_recovery_test.cc  vcs_powerfail_test.cc  vcs_snapshot_powerfail_test.cc
test/helpers/: chaos_runner.h  engine_test_util.h  matrix_case.h  matrix_test_runner.h  powerfail_fuzz.h  rar_oracle_bridge.h  snapshot_oracle.h  sqllogic_common.h
test/matrix/: balanced_matrix_inc.h  balanced_matrix_test.cc  chaos_matrix_inc.h  chaos_matrix_test.cc  concurrent_matrix_inc.h  concurrent_matrix_test.cc  durability_matrix_inc.h  durability_matrix_test.cc  flashback_matrix_inc.h  flashback_matrix_test.cc  no_fallback_matrix_inc.h  no_fallback_matrix_test.cc  ondisk_matrix_inc.h  ondisk_matrix_test.cc  paged_matrix_inc.h  paged_matrix_test.cc  pipeline_matrix_inc.h  pipeline_matrix_test.cc  recovery_matrix_inc.h  recovery_matrix_test.cc  shard_matrix_inc.h  shard_matrix_test.cc  wal_index_matrix_inc.h  wal_index_matrix_test.cc
test/nested/: nested_fixture_test.cc
test/pipeline/: background_flush_test.cc  compress_datafile_test.cc  compress_perf_test.cc  gc_region_test.cc  histogram_summary_test.cc  lazy_get_test.cc  lsv_perf_regression_test.cc  memtable_pipeline_test.cc  mmap_recovery_test.cc  multishard_recovery_test.cc  paged_btree_recovery_test.cc  perf_regression_test.cc  pipeline_durability_test.cc  rto_open_test.cc  tlog_durability_test.cc
test/runner/: test_runner.cc
test/unit/: balanced_durability_test.cc  catalog_key_encoding_test.cc  datafile_lsn_index_test.cc  forbidden_enforcement_test.cc  forbidden_manifest_test.cc  invariant_concurrency_test.cc  invariant_durability_test.cc  invariant_forbidden_test.cc  invariant_gc_test.cc  invariant_manifest_test.cc  invariant_memtable_test.cc  invariant_mmap_test.cc  invariant_ondisk_btree_test.cc  invariant_paged_btree_test.cc  invariant_recovery_test.cc  invariant_summary_test.cc  invariant_vcs_test.cc  lazy_committed_get_test.cc  lzma_codec_test.cc  manifest_consistency_test.cc  page_file_test.cc  read_resolver_test.cc  recovery_state_test.cc  sfs_read_test.cc  shard_engine_test.cc  snapshot_resolver_test.cc  sync_manifest_test.cc  tsl3_lock_test.cc  unit_success_test.cc  value_codec_test.cc  vcs_chain_test.cc  vcs_gc_pin_test.cc  wal_key_index_test.cc
tools/ebtree_audit/: CMakeLists.txt  catalog_expect.cc  catalog_expect.h  contract_attestor.cc  contract_attestor.h  digest.cc  digest.h  expect_loader.cc  json_writer.cc  json_writer.h  main.cc  op_log_expect.cc  op_log_expect.h  op_log_head_hash.cc  op_log_head_hash.h  op_log_reader.h  physical_attestor.cc  physical_attestor.h  policy_gate.cc  policy_gate.h  rar_builder.cc  rar_builder.h  rar_chain.cc  rar_chain.h  rar_chain_anchor.cc  rar_chain_anchor.h  rar_sign.h  (+21 more)
(+456 files in other folders)
